<resources>
    <string name="app_name">YQBD</string>
    <string name="user_register">用户注册</string>
    <string name="company_register">商家注册</string>
    <string name="company_login">商家登录</string>
    <string name="user_login">用户登录</string>
    <string name="login">登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="id_number">证件</string>
    <string name="foot_mark">我的足迹</string>
    <string name="professional_level">服务专业性等级</string>
    <string name="credit_level">信用与服务等级</string>
    <string name="task_title">标题</string>
    <string name="task_description">描述</string>
    <string name="task_address">地点（可选）</string>
    <string name="pay">报酬</string>
    <string name="task_publish">提交</string>
    <string name="dealline">请选择截止日期</string>
    <string name="upload_picture">上传图片</string>
    <string name="sign_up_people_number">报名人数</string>
    <string name="current_people_number">已招人数</string>
    <string name="max_people_number">最大人数</string>

    <string name="group_id">对象组号</string>
    <string name="group_title">组名</string>
    <string name="candidate_name">申请人</string>
    <string name="group_description">小组描述</string>
    <string name="logout">注销</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
</resources>
