<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/top_toolbar"/>
    <Button
            android:text="@string/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/user_login"/>
    <Button
            android:text="@string/company_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/company_login"/>
    <Button
            android:text="@string/company_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/company_register"/>
    <Button
            android:text="@string/user_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/user_register"/>
</LinearLayout>