<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              tools:context="com.yqbd.yqbd.fragments.PersonalFragment">
    <include layout="@layout/top_toolbar"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_portrait"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:src="@drawable/head"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:id="@+id/nick_name"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:id="@+id/sex"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:id="@+id/id_number"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foot_mark"
            android:id="@+id/foot_mark"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="testtesttest"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professional_level"
            android:id="@+id/professional_level"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_level"
            android:id="@+id/credit_level"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="我发布的任务"
            android:id="@+id/my_published"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="我接受的任务"
            android:id="@+id/my_taken"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/logout"/>
</LinearLayout>
</ScrollView>