<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_create_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.yqbd.yqbd.activities.group.CreateGroupActivity">
    <include layout="@layout/top_toolbar"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/group_title"
                    android:ems="10"
                    android:id="@+id/group_title"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/group_description"
                    android:ems="10"
                    android:id="@+id/group_description"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/max_people_number"
                    android:ems="10"
                    android:id="@+id/max_people_number"/>

            <Button
                    android:text="@string/task_publish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btn_group_create"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
